bot/test_output_axe7b.txt
cargo :    Compiling hft_bot 
v0.1.0 (C:\Users\jules\Docume
nts\bot4\bot)
Au caractère Ligne:1 : 1
+ cargo test 2>&1 | Out-File 
-FilePath C:\Users\jules\Docu
ments\bot4\bo ...
+ ~~~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (   Comp  
  iling hf...ments\bot4\bo   
 t):String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
warning: unused import: 
`super::*`
   --> 
src\core\channels.rs:103:9
    |
103 |     use super::*;
    |         ^^^^^^^^
    |
    = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused import: 
`Orderbook`
    --> 
src\core\execution.rs:1014:47
     |
1014 |     use crate::adapter
s::types::{OrderStatus, 
Orderbook};
     |                       
                        
^^^^^^^^^

warning: unused import: 
`AtomicU64`
    --> 
src\core\execution.rs:1015:29
     |
1015 |     use std::sync::ato
mic::{AtomicU64, Ordering};
     |                       
      ^^^^^^^^^

warning: unused import: 
`std::sync::Arc`
    --> 
src\core\execution.rs:1016:9
     |
1016 |     use 
std::sync::Arc;
     |         ^^^^^^^^^^^^^^

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
   --> 
src\core\runtime.rs:624:17
    |
624 |                 &mut 
executor,
    |                 
^^^^^^^^^^^^^ cannot borrow 
as mutable
    |
help: consider changing this 
to be mutable
    |
600 |         let mut 
executor = 
DeltaNeutralExecutor::new(
    |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
   --> 
src\core\runtime.rs:677:17
    |
677 |                 &mut 
executor,
    |                 
^^^^^^^^^^^^^ cannot borrow 
as mutable
    |
help: consider changing this 
to be mutable
    |
659 |         let mut 
executor = 
DeltaNeutralExecutor::new(
    |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
   --> 
src\core\runtime.rs:738:17
    |
738 |                 &mut 
executor,
    |                 
^^^^^^^^^^^^^ cannot borrow 
as mutable
    |
help: consider changing this 
to be mutable
    |
715 |         let mut 
executor = 
DeltaNeutralExecutor::new(
    |             +++

error[E0596]: cannot borrow 
`executor` as mutable, as it 
is not declared as mutable
   --> 
src\core\runtime.rs:906:17
    |
906 |                 &mut 
executor,
    |                 
^^^^^^^^^^^^^ cannot borrow 
as mutable
    |
help: consider changing this 
to be mutable
    |
890 |         let mut 
executor = 
DeltaNeutralExecutor::new(
    |             +++

For more information about 
this error, try `rustc 
--explain E0596`.
warning: `hft_bot` (lib 
test) generated 4 warnings
error: could not compile 
`hft_bot` (lib test) due to 
4 previous errors; 4 
warnings emitted
warning: build failed, 
waiting for other jobs to 
finish...
